# setup-py-proxy

./: README.md  pyproject.toml
src/setup_py_proxy/: __init__.py
